--- a/Kërkues-Backend/Kërkues-Backend.csproj
+++ b/Kërkues-Backend/Kërkues-Backend.csproj
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Annytab.Stemmer" Version="1.2.4" />
+    <PackageReference Include="Microsoft.ML" Version="1.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Files\" />
+    <Folder Include="TestFiles\" />
   </ItemGroup>
 
 </Project>
