--- a/Kërkues-Backend/appsettings.json
+++ b/Kërkues-Backend/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FileLocationTest": "./TestFiles/cran.all.5",
+  "FileLocation": "./Files"
 }
